--- a/collection.html
+++ b/collection.html
@@ -10,11 +10,18 @@
     <link rel="stylesheet" href="style./css/popinfo.css">
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
 
 </head>
@@ -110,12 +117,13 @@
                     Gender : Male <br>
                     Colour : define <br>
                     Price : 0.0 Rs <br>
-                    <small>More</small></p>
-                    <span class="nav-text" style="padding-top: 4px; margin: auto;">
+                    <small>More</small>
+                    <span class="nav-text">
                         <a data-toggle="modal" data-target="#reserveModal">
-                            <span class="btn btn-success">Order Now!</span>
-                    </a>
+                            <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
+                        </a>
                     </span>
+                </p>
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
@@ -127,11 +135,11 @@
                     Colour : define <br>
                     Price : 0.0 Rs <br>
                     <small>More</small></p>
-                    <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                        <a data-toggle="modal" data-target="#reserveModal">
-                            <span class="btn btn-success">Order Now!</span>
+                <span class="nav-text" style="padding-top: 4px; margin: auto;">
+                    <a data-toggle="modal" data-target="#reserveModal">
+                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
-                    </span>
+                </span>
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
@@ -143,11 +151,11 @@
                     Colour : define <br>
                     Price : 0.0 Rs <br>
                     <small>More</small></p>
-                    <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                        <a data-toggle="modal" data-target="#reserveModal">
-                            <span class="btn btn-success">Order Now!</span>
+                <span class="nav-text" style="padding-top: 4px; margin: auto;">
+                    <a data-toggle="modal" data-target="#reserveModal">
+                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
-                    </span>
+                </span>
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
@@ -159,11 +167,11 @@
                     Colour : define <br>
                     Price : 0.0 Rs <br>
                     <small>More</small></p>
-                    <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                        <a data-toggle="modal" data-target="#reserveModal">
-                            <span class="btn btn-success">Order Now!</span>
+                <span class="nav-text" style="padding-top: 4px; margin: auto;">
+                    <a data-toggle="modal" data-target="#reserveModal">
+                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
-                    </span>
+                </span>
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
@@ -175,11 +183,28 @@
                     Colour : define <br>
                     Price : 0.0 Rs <br>
                     <small>More</small></p>
+                <span class="nav-text" style="padding-top: 4px; margin: auto;">
+                    <a data-toggle="modal" data-target="#reserveModal">
+                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
+                    </a>
+                </span>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small>
                     <span class="nav-text" style="padding-top: 4px; margin: auto;">
                         <a data-toggle="modal" data-target="#reserveModal">
-                            <span class="btn btn-success">Order Now!</span>
-                    </a>
+                            <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
+                        </a>
                     </span>
+                </p>
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
@@ -191,11 +216,11 @@
                     Colour : define <br>
                     Price : 0.0 Rs <br>
                     <small>More</small></p>
-                    <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                        <a data-toggle="modal" data-target="#reserveModal">
-                            <span class="btn btn-success">Order Now!</span>
+                <span class="nav-text" style="padding-top: 4px; margin: auto;">
+                    <a data-toggle="modal" data-target="#reserveModal">
+                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
-                    </span>
+                </span>
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
@@ -207,32 +232,16 @@
                     Colour : define <br>
                     Price : 0.0 Rs <br>
                     <small>More</small></p>
-                    <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                        <a data-toggle="modal" data-target="#reserveModal">
-                            <span class="btn btn-success">Order Now!</span>
+                <span class="nav-text" style="padding-top: 4px; margin: auto;">
+                    <a data-toggle="modal" data-target="#reserveModal">
+                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
-                    </span>
+                </span>
             </div>
         </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br>
-                    Colour : define <br>
-                    Price : 0.0 Rs <br>
-                    <small>More</small></p>
-                    <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                        <a data-toggle="modal" data-target="#reserveModal">
-                            <span class="btn btn-success">Order Now!</span>
-                    </a>
-                    </span>
-            </div>
-        </div>
-        
 
-        
+
+
     </div>
     <script src="./js/loading.js"></script>
     <script src="./js/popinfo.js"></script>
