--- a/fabric.html
+++ b/fabric.html
@@ -21,12 +21,15 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background:none; border:none">
+    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+        aria-label="Toggle navigation" style="background:none; border:none">
         <span class="navbar-toggler-icon"></span>
     </button>
 
 
-    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo " src="./images/logo.jfif " alt="logo " srcset=" ">
+    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo "
+            src="./images/logo.jfif " alt="logo " srcset=" ">
     </a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -35,25 +38,28 @@
                 <a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="collection.html"><span class="fas fa-compact-disc fa-lg"></span> Collection</a>
+                <a class="nav-link " href="collection.html"><span class="fas fa-compact-disc fa-lg"></span>
+                    Collection</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link about" href="fabric.html"><span class="fas fa-tshirt fa-lg"></span> Fabric</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="contact.html"><span class="fas fa-blender-phone fg-lg"></span> Contact Us</a>
+                <a class="nav-link " href="contact.html"><span class="fas fa-comments fg-lg"></span> Contact Us</a>
             </li>
             <li style="padding-top: .3rem;">
                 <div style="background-color: #b18b22; border-radius: 4px;">
                     <form class="form-inline ">
-                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search" style="border-radius: 2px;">
+                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                            aria-label="Search" style="border-radius: 2px;">
                         <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
                     </form>
                 </div>
             </li>
         </ul>
     </div>
-    <div class="avtar "><i class="far fa-user-circle fa-2x "></i></div><i class="fas fa-caret-down fa-2x "></i>
+    <div class="avtar "><i class="fas fa-caret-down fa-2x "></i>&nbsp;</div>
+    <i class="fas fa-user-circle fa-2x "></i>
 
 </nav>
 
