--- a/collection.html
+++ b/collection.html
@@ -134,72 +134,8 @@
                     Gender : Male <br>
                     Colour : define <br>
                     Price : 0.0 Rs <br>
-                    <small>More</small></p>
-                <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                    <a data-toggle="modal" data-target="#reserveModal">
-                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
-                    </a>
-                </span>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br>
-                    Colour : define <br>
-                    Price : 0.0 Rs <br>
-                    <small>More</small></p>
-                <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                    <a data-toggle="modal" data-target="#reserveModal">
-                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
-                    </a>
-                </span>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br>
-                    Colour : define <br>
-                    Price : 0.0 Rs <br>
-                    <small>More</small></p>
-                <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                    <a data-toggle="modal" data-target="#reserveModal">
-                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
-                    </a>
-                </span>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br>
-                    Colour : define <br>
-                    Price : 0.0 Rs <br>
-                    <small>More</small></p>
-                <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                    <a data-toggle="modal" data-target="#reserveModal">
-                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
-                    </a>
-                </span>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br>
-                    Colour : define <br>
-                    Price : 0.0 Rs <br>
                     <small>More</small>
-                    <span class="nav-text" style="padding-top: 4px; margin: auto;">
+                    <span class="nav-text">
                         <a data-toggle="modal" data-target="#reserveModal">
                             <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                         </a>
@@ -215,12 +151,13 @@
                     Gender : Male <br>
                     Colour : define <br>
                     Price : 0.0 Rs <br>
-                    <small>More</small></p>
-                <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                    <a data-toggle="modal" data-target="#reserveModal">
-                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
-                    </a>
-                </span>
+                    <small>More</small>
+                    <span class="nav-text">
+                        <a data-toggle="modal" data-target="#reserveModal">
+                            <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
+                        </a>
+                    </span>
+                </p>
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
@@ -231,14 +168,84 @@
                     Gender : Male <br>
                     Colour : define <br>
                     Price : 0.0 Rs <br>
-                    <small>More</small></p>
-                <span class="nav-text" style="padding-top: 4px; margin: auto;">
-                    <a data-toggle="modal" data-target="#reserveModal">
-                        <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
-                    </a>
-                </span>
+                    <small>More</small>
+                    <span class="nav-text">
+                        <a data-toggle="modal" data-target="#reserveModal">
+                            <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
+                        </a>
+                    </span>
+                </p>
             </div>
         </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small>
+                    <span class="nav-text">
+                        <a data-toggle="modal" data-target="#reserveModal">
+                            <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
+                        </a>
+                    </span>
+                </p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small>
+                    <span class="nav-text">
+                        <a data-toggle="modal" data-target="#reserveModal">
+                            <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
+                        </a>
+                    </span>
+                </p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small>
+                    <span class="nav-text">
+                        <a data-toggle="modal" data-target="#reserveModal">
+                            <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
+                        </a>
+                    </span>
+                </p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br>
+                    Colour : define <br>
+                    Price : 0.0 Rs <br>
+                    <small>More</small>
+                    <span class="nav-text">
+                        <a data-toggle="modal" data-target="#reserveModal">
+                            <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
+                        </a>
+                    </span>
+                </p>
+            </div>
+        </div>
+
 
 
 
