--- a/collection.html
+++ b/collection.html
@@ -39,7 +39,7 @@
                     Collection</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link about" href="fabric.html"><span class="fas fa-tshirt fa-lg"></span> Fabric</a>
+                <a class="nav-link about" href="fabric.html"><span class="fas fa-money-check-alt fa-lg"></span> Pricing</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link " href="contact.html"><span class="fas fa-comments fg-lg"></span> Contact Us</a>
