--- a/contact.html
+++ b/contact.html
@@ -21,15 +21,12 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse"
-        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-        aria-label="Toggle navigation" style="background:none; border:none">
+    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background:none; border:none">
         <span class="navbar-toggler-icon"></span>
     </button>
 
 
-    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo "
-            src="./images/logo.jfif " alt="logo " srcset=" ">
+    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo " src="./images/logo.jfif " alt="logo " srcset=" ">
     </a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -42,7 +39,7 @@
                     Collection</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link about" href="fabric.html"><span class="fas fa-tshirt fa-lg"></span> Fabric</a>
+                <a class="nav-link about" href="fabric.html"><span class="fas fa-money-check-alt fa-lg"></span> Pricing</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link " href="contact.html"><span class="fas fa-comments fg-lg"></span> Contact Us</a>
@@ -50,8 +47,7 @@
             <li style="padding-top: .3rem;">
                 <div style="background-color: #b18b22; border-radius: 4px;">
                     <form class="form-inline ">
-                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
-                            aria-label="Search" style="border-radius: 2px;">
+                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search" style="border-radius: 2px;">
                         <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
                     </form>
                 </div>
