--- a/fabric.html
+++ b/fabric.html
@@ -92,11 +92,80 @@
 <body>
 
     <!-- Contact us -->
-    <br><br>
-    <div class="contact_us ">
-        <p class="label ">Fabric</p><br><br>
+    <br><br><br>
+    <p class="label ">Pricing</p><br><br>
+    <div class="our_work ">
+
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br> Type : Kurta <br> Pricing start from : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Female <br> Type : Kurti <br> Pricing start from : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br> Type : Trouser's <br> Pricing start from : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Female <br> Type : plazzo <br> Pricing start from : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br> Type : Jeans <br> Pricing start from : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Female <br> Type : Bridal <br> Pricing start from : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Male <br> Type : Pent Coat <br> Pricing start from : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+        <div class="card " style="width: 15rem; height: 20rem;">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <div class="card-body">
+                <p class="card-text cinfo">
+                    Gender : Female <br> Type : frok <br> Pricing start from : 0.0 Rs <br>
+                    <small>More</small></p>
+            </div>
+        </div>
+
+
+
 
     </div>
+
 
 
     <script src="./js/loading.js"></script>
