--- a/index.html
+++ b/index.html
@@ -108,86 +108,158 @@
             <a class="btn btn-danger btn-lg" href="#" role="button"><i>Place Your Order Now!</i></a>
         </p>
     </div>
-
-    <!-- Our work -->
-    <br>
-    <p class="label">OUR COLLECTION</p>
-
-    <div class="our_work ">
-
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
-                    <small>More</small></p>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
-                    <small>More</small></p>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
-                    <small>More</small></p>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
-                    <small>More</small></p>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
-                    <small>More</small></p>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
-                    <small>More</small></p>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
-                    <small>More</small></p>
-            </div>
-        </div>
-        <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
-            <div class="card-body">
-                <p class="card-text cinfo">
-                    Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
-                    <small>More</small></p>
+    <!------------------------carousel-------------------------------------------------------------->
+    <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="images/style.jpg" alt="uthappizza">
+                            <div class="carousel-caption">
+                                <h2><i>Style</i></h2>
+                                <p><i> We focus on style. Our product met on all the requirement of modern erra.</i></p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="images/Quality.jpg" alt="buffet">
+                            <div class="carousel-caption">
+                                <h2><i>Quality</i></h2>
+                                <p> <i> On "Tailor Online" quality is our core value. We ensure that all our product met on high "Stitching" and "Stuff" quality standards.</i></p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="images/timing.jpg" alt="buffet">
+                            <div class="carousel-caption">
+                                <h2><i>On Time</i></h2>
+                                <p><i> On "Tailor Online" we break traditional tailor attitude. We are commited on time and ensure all our deliveries on time to our customers because "Customer Satisfaction" is our priority.</i></p>
+                            </div>
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a href="#mycarousel" class="carousel-control-prev" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a href="#mycarousel" class="carousel-control-next" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+<span id="carousel-button-icon" class="fa fa-pause"></span>
+</button>
+                    </div>
+                </div>
             </div>
         </div>
 
 
+        <!-- Our work -->
+        <br>
+        <p class="label">OUR COLLECTION</p>
+
+        <div class="our_work ">
+
+            <div class="card " style="width: 15rem; height: 20rem;">
+                <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+                <div class="card-body">
+                    <p class="card-text cinfo">
+                        Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
+                        <small>More</small></p>
+                </div>
+            </div>
+            <div class="card " style="width: 15rem; height: 20rem;">
+                <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+                <div class="card-body">
+                    <p class="card-text cinfo">
+                        Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
+                        <small>More</small></p>
+                </div>
+            </div>
+            <div class="card " style="width: 15rem; height: 20rem;">
+                <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+                <div class="card-body">
+                    <p class="card-text cinfo">
+                        Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
+                        <small>More</small></p>
+                </div>
+            </div>
+            <div class="card " style="width: 15rem; height: 20rem;">
+                <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+                <div class="card-body">
+                    <p class="card-text cinfo">
+                        Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
+                        <small>More</small></p>
+                </div>
+            </div>
+            <div class="card " style="width: 15rem; height: 20rem;">
+                <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+                <div class="card-body">
+                    <p class="card-text cinfo">
+                        Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
+                        <small>More</small></p>
+                </div>
+            </div>
+            <div class="card " style="width: 15rem; height: 20rem;">
+                <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+                <div class="card-body">
+                    <p class="card-text cinfo">
+                        Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
+                        <small>More</small></p>
+                </div>
+            </div>
+            <div class="card " style="width: 15rem; height: 20rem;">
+                <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+                <div class="card-body">
+                    <p class="card-text cinfo">
+                        Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
+                        <small>More</small></p>
+                </div>
+            </div>
+            <div class="card " style="width: 15rem; height: 20rem;">
+                <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+                <div class="card-body">
+                    <p class="card-text cinfo">
+                        Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
+                        <small>More</small></p>
+                </div>
+            </div>
 
 
-    </div>
 
 
-    <script src="./js/loading.js"></script>
-    <script src="./js/popinfo.js"></script>
+        </div>
+
+
+        <script src="./js/loading.js"></script>
+        <script src="./js/popinfo.js"></script>
+        <script>
+            $(document).ready(function() {
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+            $("#carouselButton").click(function() {
+                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carouselButton").children("span").removeClass('fa-pause');
+                    $("#carouselButton").children("span").addClass('fa-play');
+                } else if ($("#carouselButton").children("span").hasClass('fa-play')) {
+                    $("#mycarousel").carousel('cycle');
+                    $("#carouselButton").children("span").removeClass('fa-play');
+                    $("#carouselButton").children("span").addClass('fa-pause');
+                }
+            });
+            var modal = document.getElementById('id01');
+
+            // When the user clicks anywhere outside of the modal, close it
+            window.onclick = function(event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
+        </script>
 
 
 </body>
