--- a/index.html
+++ b/index.html
@@ -4,29 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailor Online _ Main</title>
+    <title>Home | Tailor Online</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/load.css">
     <link rel="stylesheet" href="style./css/popinfo.css">
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
 
 </head>
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background:none; border:none">
+    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+        aria-label="Toggle navigation" style="background:none; border:none">
         <span class="navbar-toggler-icon"></span>
     </button>
 
 
-    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo " src="./images/logo.jfif " alt="logo " srcset=" ">
+    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo "
+            src="./images/logo.jfif " alt="logo " srcset=" ">
     </a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -39,7 +49,8 @@
                     Collection</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link about" href="fabric.html"><span class="fas fa-money-check-alt fa-lg"></span> Pricing</a>
+                <a class="nav-link about" href="fabric.html"><span class="fas fa-money-check-alt fa-lg"></span>
+                    Pricing</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link " href="contact.html"><span class="fas fa-comments fg-lg"></span> Contact Us</a>
@@ -47,7 +58,8 @@
             <li style="padding-top: .3rem;">
                 <div style="background-color: #b18b22; border-radius: 4px;">
                     <form class="form-inline ">
-                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search" style="border-radius: 2px;">
+                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                            aria-label="Search" style="border-radius: 2px;">
                         <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
                     </form>
                 </div>
@@ -125,14 +137,17 @@
                             <img class="d-block img-fluid" src="images/Quality.jpg" alt="buffet">
                             <div class="carousel-caption">
                                 <h2><i>Quality</i></h2>
-                                <p> <i> On "Tailor Online" quality is our core value. We ensure that all our product met on high "Stitching" and "Stuff" quality standards.</i></p>
+                                <p> <i> On "Tailor Online" quality is our core value. We ensure that all our product met
+                                        on high "Stitching" and "Stuff" quality standards.</i></p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block img-fluid" src="images/timing.jpg" alt="buffet">
                             <div class="carousel-caption">
                                 <h2><i>On Time</i></h2>
-                                <p><i> On "Tailor Online" we break traditional tailor attitude. We are commited on time and ensure all our deliveries on time to our customers because "Customer Satisfaction" is our priority.</i></p>
+                                <p><i> On "Tailor Online" we break traditional tailor attitude. We are commited on time
+                                        and ensure all our deliveries on time to our customers because "Customer
+                                        Satisfaction" is our priority.</i></p>
                             </div>
                         </div>
                     </div>
@@ -149,8 +164,8 @@
                     </a>
                     <div class="btn-group" id="carouselButton">
                         <button class="btn btn-danger btn-sm" id="carouselButton">
-<span id="carousel-button-icon" class="fa fa-pause"></span>
-</button>
+                            <span id="carousel-button-icon" class="fa fa-pause"></span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -164,7 +179,8 @@
     <div class="our_work ">
 
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -172,7 +188,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -180,7 +197,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -188,7 +206,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -196,7 +215,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -204,7 +224,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -212,7 +233,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -220,7 +242,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -237,10 +260,10 @@
     <script src="./js/loading.js"></script>
     <script src="./js/popinfo.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('[data-toggle="tooltip"]').tooltip();
         });
-        $("#carouselButton").click(function() {
+        $("#carouselButton").click(function () {
             if ($("#carouselButton").children("span").hasClass('fa-pause')) {
                 $("#mycarousel").carousel('pause');
                 $("#carouselButton").children("span").removeClass('fa-pause');
@@ -254,7 +277,7 @@
         var modal = document.getElementById('id01');
 
         // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function(event) {
+        window.onclick = function (event) {
             if (event.target == modal) {
                 modal.style.display = "none";
             }
@@ -267,12 +290,28 @@
 
 <footer>
 
-    <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank">
-        <i class="fas fa-at fa-1.9x"> Contact - Taimoor</i>
-    </a><br>
-    <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank">
-        <i class="fas fa-at fa-1.9x"> Contact - Awais</i>
-    </a>
+    <div class="row container-fluid" style="padding-top: 2rem;">
+        <div class="col-lg-3 col-md-3 col-sm-6">
+            <label>General Information</label><br><br>
+            <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank">
+                <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Taimoor
+            </a><br>
+            <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank">
+                <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Awais
+            </a>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-6"></div>
+
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <label>Find us here</label><br>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.414381286717!2d74.40751999999996!3d31.547018299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190f8aa6801965%3A0xd4b98ebf429d2311!2sAl-Faisal%20Town%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e1!3m2!1sen!2s!4v1604678886811!5m2!1sen!2s"
+                width="350" height="200" frameborder="0" style="border:0; border-radius: .3rem; padding: .1rem;"
+                allowfullscreen="" aria-hidden=" false" tabindex="0"></iframe>
+
+        </div>
+    </div>
 
     <p>
         <center>
