--- a/collection.html
+++ b/collection.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Tailor</title>
+    <title>Collection | Online Tailor</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/load.css">
     <link rel="stylesheet" href="style./css/popinfo.css">
@@ -218,10 +218,10 @@
 <footer>
 
     <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank">
-        <i class="fas fa-at fa-1.9x"> Contact - Taimoor</i>
+        <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Taimoor
     </a><br>
     <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank">
-        <i class="fas fa-at fa-1.9x"> Contact - Awais</i>
+        <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Awais
     </a>
 
     <p>
