--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Tailor</title>
+    <title>Contact | Online Tailor</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/load.css">
     <link rel="stylesheet" href="style./css/popinfo.css">
@@ -109,12 +109,28 @@
 
 <footer>
 
-    <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank">
-        <i class="fas fa-at fa-1.9x"> Contact - Taimoor</i>
-    </a><br>
-    <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank">
-        <i class="fas fa-at fa-1.9x"> Contact - Awais</i>
-    </a>
+    <div class="row container-fluid" style="padding-top: 2rem;">
+        <div class="col-lg-3 col-md-3 col-sm-6">
+            <label>General Information</label><br><br>
+            <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank">
+                <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Taimoor
+            </a><br>
+            <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank">
+                <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Awais
+            </a>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-6"></div>
+
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <label>Find us here</label><br>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.414381286717!2d74.40751999999996!3d31.547018299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190f8aa6801965%3A0xd4b98ebf429d2311!2sAl-Faisal%20Town%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e1!3m2!1sen!2s!4v1604678886811!5m2!1sen!2s"
+                width="350" height="200" frameborder="0" style="border:0; border-radius: .3rem; padding: .1rem;"
+                allowfullscreen="" aria-hidden=" false" tabindex="0"></iframe>
+
+        </div>
+    </div>
 
     <p>
         <center>
